--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.flyway.url=${JDBC_DATABASE_URL}
 spring.flyway.user=${JDBC_DATABASE_USERNAME}
 spring.flyway.password=${JDBC_DATABASE_PASSWORD}
-spring.flyway.schemas=quizilla
+spring.flyway.schemas=georgia_and_tours
 spring.flyway.baseline-on-migrate=true
 
 # HikariCP configuration
@@ -24,8 +24,11 @@ spring.datasource.hikari.connection-timeout=30000
 # JWT secret
 jwt.secret=${JWT_SECRET}
 
-# constants
-#tours.
+# Constants
+tours.ADMIN_ROLE=ADMIN_ROLE
+tours.CLIENT_ROLE=CLIENT_ROLE
+tours.SERVER_ROLE=SERVER_ROLE
+tours.WEBSOCKET_SID=WEBSOCKET_SID
 
 # Server port
 server.port=8080
