feat: add basic websocket logic and functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,8 @@ tours.ADMIN_ROLE=ADMIN_ROLE
 tours.CLIENT_ROLE=CLIENT_ROLE
 tours.SERVER_ROLE=SERVER_ROLE
 tours.WEBSOCKET_SID=WEBSOCKET_SID
+tours.USER_CREATION=USER_CREATION
+tours.SAVE_ADMIN_SID=SAVE_ADMIN_SID
 
 # Server port
 server.port=8080
